test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-shared-from-oknil-nil.chpl
//  lhs: shared?  rhs: nil?  ok

class MyClass {  var x: int;  }



record MyRecord {
  var lhs: shared MyClass?;
  proc init(in rhs) where ! isSubtype(rhs.type, MyRecord) {
    lhs = rhs;
  }
}

var myr = new MyRecord(nil);


